1st banner done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="responsive/mobile.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -21,20 +23,40 @@
                     <h3 class="header-name"><span class="G-colour">G</span>amer</h3>
                 </div>
                 <div class="header-container-menu">
-                 <a href="" class="menu">About Us</a>
-                 <a href="" class="menu">Developers</a>
-                 <div class="icon-container">
-                    <a href="" class="menu">Follow Us On</a>
-                    <img id="icon1" src="images/youtube.png" alt="">
-                    <img id="icon2" src="images/tiktok.png">
+                    <a href="" class="menu">About Us</a>
+                    <a href="" class="menu">Developers</a>
+                    <div class="icon-container">
+                        <a href="" class="menu">Follow Us On</a>
+                        <img id="icon1" src="images/youtube.png" alt="">
+                        <img id="icon2" src="images/tiktok.png">
 
-                 </div>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-
+        <section>
+            <div class="first-banner-container">
+                <div class="one">
+                    <div class="first-banner-text">
+                        <h3 class="banner-title-subline">Play Like The</h3>
+                        <h1 class="banner-title">G.O.A.T.</h1>
+                        <p class="subline"><i  class="fa-solid fa-circle-play gap"></i>1-Click instant play</p>
+                        <p class="subline"><i  class="fa-solid fa-download gap"></i>No Download</p>
+                        <p class="subline"><i  class="fa-solid fa-phone gap"></i>1000s of supported online games</p>
+                        <div class="first-banner-buttons">
+                            <button class="sign-in">Sign In</button>
+                            <button class="go-rogue">Go Rogue</button>
+                        </div>
+                </div>
+               
+                </div>
+                <div class="first-banner-img">
+                 <img src="images/Group 18.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
