online-game-section-part

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- header section done -->
     <header>
         <nav>
             <div class="header-container">
@@ -36,9 +37,9 @@
         </nav>
     </header>
     <main>
-        <section>
+        <!-- first-banner-section -->
+        <section class="first-banner">
             <div class="first-banner-container">
-                <div class="one">
                     <div class="first-banner-text">
                         <h3 class="banner-title-subline">Play Like The</h3>
                         <h1 class="banner-title">G.O.A.T.</h1>
@@ -46,17 +47,43 @@
                         <p class="subline"><i  class="fa-solid fa-download gap"></i>No Download</p>
                         <p class="subline"><i  class="fa-solid fa-phone gap"></i>1000s of supported online games</p>
                         <div class="first-banner-buttons">
-                            <button class="sign-in">Sign In</button>
-                            <button class="go-rogue">Go Rogue</button>
-                        </div>
+                            <button class="sign-in margin">Sign In</button>
+                            <button class="go-rogue ">Go Rogue</button>
+                        </div>               
                 </div>
-               
                 </div>
                 <div class="first-banner-img">
                  <img src="images/Group 18.png" alt="">
                 </div>
+        </section>
+        <!-- online game section end here -->
+
+        <section class="online-games-section">
+            <div class="online-game-title">
+                <h3>Online Games <span class="section-title">Funny Videos</span></h3>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-game-container">
+                <div class="game-card">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="game-card">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="game-card">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="game-card">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+
             </div>
         </section>
+
     </main>
     <footer>
 
