game play section

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         <!-- first-banner-section -->
         <section class="first-banner">
             <div class="first-banner-container">
-                    <div class="first-banner-text">
-                        <h3 class="banner-title-subline">Play Like The</h3>
-                        <h1 class="banner-title">G.O.A.T.</h1>
-                        <p class="subline"><i  class="fa-solid fa-circle-play gap"></i>1-Click instant play</p>
-                        <p class="subline"><i  class="fa-solid fa-download gap"></i>No Download</p>
-                        <p class="subline"><i  class="fa-solid fa-phone gap"></i>1000s of supported online games</p>
-                        <div class="first-banner-buttons">
-                            <button class="sign-in margin">Sign In</button>
-                            <button class="go-rogue ">Go Rogue</button>
-                        </div>               
+                <div class="first-banner-text">
+                    <h3 class="banner-title-subline">Play Like The</h3>
+                    <h1 class="banner-title">G.O.A.T.</h1>
+                    <p class="subline"><i class="fa-solid fa-circle-play gap"></i>1-Click instant play</p>
+                    <p class="subline"><i class="fa-solid fa-download gap"></i>No Download</p>
+                    <p class="subline"><i class="fa-solid fa-phone gap"></i>1000s of supported online games</p>
+                    <div class="first-banner-buttons">
+                        <button class="sign-in margin">Sign In</button>
+                        <button class="go-rogue ">Go Rogue</button>
+                    </div>
                 </div>
-                </div>
-                <div class="first-banner-img">
-                 <img src="images/Group 18.png" alt="">
-                </div>
+            </div>
+            <div class="first-banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
         </section>
         <!-- online game section end here -->
 
@@ -83,7 +83,63 @@
 
             </div>
         </section>
+        <!-- game play section  -->
 
+        <section class="game-play-container">
+            <div class="game-content">
+                <div>
+                    <h3 class="game-title"> <span class="section-title"> Play Instantly,</span> <br> No Downloads <br>
+                        No Installs.</h3>
+                    <p class="game-discription">Play games online for free without <br> downloading. Just click the Play
+                        button <br> and play instantly in
+                        your browser.</p>
+                </div>
+            </div>
+            <div class="game-img">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="litle">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+        <!-- game play section ends -->
+        <!-- game button section  here -->
+
+        <section class="game-button-container">
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 11.png" alt="">Action Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 12.png" alt="">Adventure Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 13.png" alt="">Action Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 14.png" alt="">Educational Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 15.png" alt="">Word Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 16.png" alt="">Role Palying Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 17.png" alt="">Music & Audio Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 18.png" alt="">Puzzle Games</button>
+            </div>
+            <div>
+                <button class="btn-game-link"><img src="images/Rectangle 19.png" alt="">Strategy Games</button>
+            </div>
+        </section>
+
+
+
+        <!-- game button section ends here -->
     </main>
     <footer>
 
