--- a/index.html
+++ b/index.html
@@ -142,7 +142,50 @@
         <!-- game button section ends here -->
     </main>
     <footer>
+        <div class="footer-container">
+            <div class="footer-image-icon">
+                <img src="images/Frame.png" alt="">
+                <p><span class="section-title">G</span>amer</p>
+            </div>
+            <div class="footer-list">
 
+                <div class="list-one">
+                    <li>Our Story</li>
+                    <li>Games</li>
+                    <li>Web Games</li>
+                </div>
+                <div class="list-two">
+                    <li>Careers</li>
+                    <li>Support</li>
+                    <li>My Account</li>
+                </div>
+
+            </div>
+            <div class="footer-icons">
+                <div class="icons-one">
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-facebook"></i></span>
+                    <span><i class="fa-brands fa-youtube"></i></span>
+                </div>
+                <div class="icons-two">
+                    <span><i class="fa-brands fa-linkedin"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <span><i class="fa-brands fa-apple"></i></span>
+                </div>
+
+            </div>
+            <div class="footer-privacy">
+                <div class="privacy-one">
+                    <li>Terms and Conditions</li>
+                    <li>Privacy Policy</li>
+                </div>
+                <div class="privacy-two">
+                    <li>Cookie Policy</li>
+                    <li>Privacy Settings</li>
+                </div>
+            </div>
+            <p class="copy-right">Play Games &copy; Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
 
     </footer>
 </body>
