--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 <body>
     <!-- header section done -->
     <header>
-        <nav>
-            <div class="header-container">
-                <div class="header-container-logo">
-                    <img class="header-img" src="images/Frame.png" alt="">
-                    <h3 class="header-name"><span class="G-colour">G</span>amer</h3>
-                </div>
-                <div class="header-container-menu">
-                    <a href="" class="menu">About Us</a>
-                    <a href="" class="menu">Developers</a>
-                    <div class="icon-container">
-                        <a href="" class="menu">Follow Us On</a>
-                        <img id="icon1" src="images/youtube.png" alt="">
-                        <img id="icon2" src="images/tiktok.png">
+        <!-- navbar section starts here -->
 
-                    </div>
+        <nav class="navber">
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="images/Frame.png" alt="">
+                    <p><span class="section-title">G</span>amer</p>
+                </div>
+                <div class="nav-items-container">
+                    <a href="">About Us</a>
+                    <a href="">Developers</a>
+                    <a class="nav-button" href="">Follow Us On
+                        <span><i class="fa-brands fa-youtube btn-icon"></i></span>
+                        <span><i class="fa-brands fa-tiktok btn-icon-two"></i></span>
+                    </a>
                 </div>
             </div>
         </nav>
-    </header>
+        </header>
     <main>
         <!-- first-banner-section -->
         <section class="first-banner">
