--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="responsive/mobile.css">
+    <link rel="stylesheet" href="responsive/teblet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -163,14 +164,14 @@
             </div>
             <div class="footer-icons">
                 <div class="icons-one">
-                    <span><i class="fa-brands fa-twitter"></i></span>
-                    <span><i class="fa-brands fa-facebook"></i></span>
-                    <span><i class="fa-brands fa-youtube"></i></span>
+                    <span><a class="text-dedcoration" href="https://twitter.com/i/flow/login?redirect_after_login=%2F" target="_blank"><i class="fa-brands fa-twitter"></i></a></i></span>
+                    <span><a class="text-dedcoration" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></span>
                 </div>
                 <div class="icons-two">
-                    <span><i class="fa-brands fa-linkedin"></i></span>
-                    <span><i class="fa-brands fa-instagram"></i></span>
-                    <span><i class="fa-brands fa-apple"></i></span>
+                    <span><a class="text-dedcoration" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.apple.com/" target="_blank"><i class="fa-brands fa-apple"></i></a></span>
                 </div>
 
             </div>
