--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </nav>
-        </header>
+    </header>
     <main>
         <!-- first-banner-section -->
         <section class="first-banner">
@@ -68,22 +68,39 @@
                 <div class="game-card">
                     <img src="images/Rectangle 4.png" alt="">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <div class="overlay">
+                        <i class="fa-regular fa-circle-play icon"></i>
+                        <p class="hover-title">Watch More</p>
+                    </div>
                 </div>
                 <div class="game-card">
                     <img src="images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
+                    <div class="overlay">
+                        <i class="fa-regular fa-circle-play icon"></i>
+                        <p class="hover-title">Watch More</p>
+                    </div>
                 </div>
                 <div class="game-card">
                     <img src="images/Rectangle 7.png" alt="">
                     <p>Breaking game records like OG</p>
+                    <div class="overlay">
+                        <i id="icon1" class="fa-regular fa-circle-play icon"></i>
+                        <p class="hover-title">Watch More</p>
+                    </div>
                 </div>
                 <div class="game-card">
                     <img src="images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <div class="overlay">
+                        <i class="fa-regular fa-circle-play icon"></i>
+                        <p class="hover-title">Watch More</p>
+                    </div>
                 </div>
 
             </div>
         </section>
+
         <!-- game play section  -->
 
         <section class="game-play-container">
@@ -106,7 +123,8 @@
 
 
         <!-- game play section ends -->
-        <!-- game button section  here -->
+
+        <!-- game button section -->
 
         <section class="game-button-container">
             <div>
@@ -140,7 +158,7 @@
 
 
 
-        <!-- game button section ends here -->
+        <!-- button section ends-->
     </main>
     <footer>
         <div class="footer-container">
@@ -164,14 +182,20 @@
             </div>
             <div class="footer-icons">
                 <div class="icons-one">
-                    <span><a class="text-dedcoration" href="https://twitter.com/i/flow/login?redirect_after_login=%2F" target="_blank"><i class="fa-brands fa-twitter"></i></a></i></span>
-                    <span><a class="text-dedcoration" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
-                    <span><a class="text-dedcoration" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://twitter.com/i/flow/login?redirect_after_login=%2F"
+                            target="_blank"><i class="fa-brands fa-twitter"></i></a></i></span>
+                    <span><a class="text-dedcoration" href="https://www.facebook.com/" target="_blank"><i
+                                class="fa-brands fa-facebook"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.youtube.com/"><i
+                                class="fa-brands fa-youtube"></i></a></span>
                 </div>
                 <div class="icons-two">
-                    <span><a class="text-dedcoration" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>
-                    <span><a class="text-dedcoration" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
-                    <span><a class="text-dedcoration" href="https://www.apple.com/" target="_blank"><i class="fa-brands fa-apple"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.linkedin.com/" target="_blank"><i
+                                class="fa-brands fa-linkedin"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.instagram.com/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a></span>
+                    <span><a class="text-dedcoration" href="https://www.apple.com/" target="_blank"><i
+                                class="fa-brands fa-apple"></i></a></span>
                 </div>
 
             </div>
